# rust-simulator

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
src/: build.rs  cv.rs  examples.rs  main.rs  mesh.rs  plotting.rs  simulator.rs  window.rs
src/sim/: cauchy_fvm.rs  mod.rs
