[package]
name = "simulator"
version = "0.1.0"
edition = "2024"

[dependencies]
ndarray = "0.16.1"
openblas-src = { version = "0.10.12", features = ["static"] }
ndarray-linalg = { version = "0.17", features = ["openblas-static"] }
plotters = "0.3"
gtk4 = "0.9.7"
plotters-gtk4 = "0.5.0"
rayon = "1.10.0"
lazy_static = "1.5.0"
plotters-arrows = "0.1.0"
bevy = { version = "0.16.0", features = ["dynamic_linking"] }

# temporary optimization level for faster compile times
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
